# traffix

./: .gitignore  README.md  alembic.ini  docker-compose-dev.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 07e38b969131_init.py  08d237fbbcd9_category_relationship_on_release.py  11b9d8a568ba_update_relationship_to_release_added_.py  13d0689b63f7_set_user_update_to_use_server_timestamp.py  30c0b99c9141_set_user_update_to_use_server_timestamp.py  634c545ad9bf_category_relationship_on_release.py  77407c6dbb1b_set_user_update_to_use_server_timestamp.py  7a74364e1b22_category_relationship_on_release.py  9fd1eb77224c_testing_release_and_category_linktable.py  a1fe86551c45_testing_release_and_category_linktable.py  a668c31871f1_added_hashed_password.py  aae411f49c2d_set_user_update_to_use_server_timestamp.py  c9dc970d8811_set_user_update_to_use_server_timestamp.py  d7d32f2962e6_release_size_to_bigint.py  de4b5f0d954a_added_superuser_status.py
tests/: conftest.py  initial_data.json  test_1_models.py  test_2_database.py
traffix/: auth.py  config.py  dependencies.py  initial_data.py  main.py  models.py
traffix/api/v1/: __init__.py
traffix/api/v1/endpoints/: api_key.py  category.py  platforms.py  releases.py  updates.py  user.py
traffix/crud/: __init__.py  base.py  ru.py
traffix/ui/static/css/: halfmoon.css  halfmoon.min.css  traffix.css
traffix/ui/templates/: fragments.py  index.html
traffix/ui/templates/fragments/: alert.html  create_request copy.html  create_request.html  (+1 more)
traffix/views/: __init__.py  ru.py
(+6 files in other folders)
